# testing-precommit-hooks

./: .pre-commit-config.yaml  .yaspeller.json  .yaspellerrc  LICENSE  LICENSE.md  LICENSE.txt  README.md  main.py  number.py  pyproject.toml  readme.md  setup.cfg
