[tool.poetry]
name = "testing-precommit-hooks"
version = "0.1.0"
description = "testing hooks for pre-commit in gitlab"
authors = ["Moid Shaikh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
